--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/Rebeckaspolander/myReactProdject#readme",
   "dependencies": {
+    "body-parser": "^1.20.1",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2"
   },
   "devDependencies": {
