--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "node server.js",
+    "dev": "nodemon server.js",
     "test": "jest --collectCoverage"
   },
   "repository": {
@@ -34,7 +34,7 @@
     "supertest": "^6.3.1"
   },
   "babel": {
-    "presets": [
+    "presets" : [
       [
         "@babel/preset-env",
         {
@@ -43,6 +43,13 @@
           }
         }
       ]
+    ]
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "**/*.js",
+      "!server.js",
+      "!coverage/**"
     ]
   }
 }
